Fix z-index issue when dragging cards.

--- a/assets/stylesheets/simple_kanban.css
+++ b/assets/stylesheets/simple_kanban.css
@@ -140,6 +140,7 @@ table.kanban .container {
 }
 
 .ui-draggable-dragging {
+  z-index: 2;
 /*  position: absolute !important;*/
 }
 
